feat(java-server): configure App-V deployment